src/test/ui/parser/issue-17383.stderr
error: discriminator values can only be used with a field-less enum
  --> $DIR/issue-17383.rs:3:9
   |
LL |         b'a' //~ ERROR discriminator values can only be used with a field-less enum
   |         ^^^^

error: aborting due to previous error

